--- a/sympy.ipynb
+++ b/sympy.ipynb
@@ -1246,7 +1246,7 @@
     "\n",
     "print(plt.plot(xler,liste))\n",
     "\n",
-    "print(\"maksimum değer : {}\\nminimum değer : {}\".format(max(liste),min(liste)))"
+    "print(\"maksimum değer : {}\\nminimum değer : {}\".format(max(liste),min(liste)))   ##https://youtu.be/i3EoTDYb3WY?list=PLSE7WKf_qqo1T5VV1nqXTj2iNiSpFk72T"
    ]
   },
   {
@@ -1280,4 +1280,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
-#https://youtu.be/i3EoTDYb3WY?list=PLSE7WKf_qqo1T5VV1nqXTj2iNiSpFk72T
+
